# linear-least-squares-methods

./: .gitignore  CLAUDE.md  README.md  pytest.ini  requirements.txt  run_example.ipynb
.github/workflows/: blank.yml
.ipynb_checkpoints/: run_example-checkpoint.ipynb
linear-least-squares-methods/: build_cpp.py  constants.py  install_dependencies.sh  main.py  pytest.ini  real_world_benchmark.py  requirements.txt  run_example.ipynb  test_cpp_module.py  test_visualization_numba.py
linear-least-squares-methods/approaches/: CMakeLists.txt  __init__.py  least_squares_cpp.cpp  least_squares_cpp_wrapper.py  least_squares_numba.py  least_squares_numpy.py  least_squares_pure.py  setup.py
linear-least-squares-methods/cvs_files/: SPY_close_price_daily_3_month_market_data.csv  prague_weather_meteostat-01.01.2016-31.12.2024.csv
linear-least-squares-methods/tests/: test_DataLoader.py  test_RegressionRun.py  test_UserInputHandler.py  test_VisualizationData.py  test_after_regression_handler.py  test_all_engines_unit.py  test_benchmark_consistency.py  test_benchmark_display.py  test_engines_advanced.py  test_least_squares_numba.py  test_least_squares_numpy.py  test_least_squares_pure.py  test_main.py  test_main_DataLoader.py  test_main_menu_comprehensive.py  test_no_numpy_usage.py  test_same_approach.py  test_timer_regression_engines.py  test_visualization_consistency.py
linear-least-squares-methods/utils/: __init__.py  after_regression_handler.py  data_loader.py  run_regression.py  timer_regression_engines.py  user_input_handler.py  visualization.py
tests/: __init__.py  test_least_squares_numpy.py  test_main_DataLoader.py
